--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,3 +11,11 @@ $danger: #F02D76;
 $transition: all 300ms ease-out;
 $radius: 5px;
 $shadow: 0 5px 25px rgba(0, 0, 0, 0.07);
+
+:export {
+  primaryColor: $primary;
+	accentColor: $accent;
+	dangerColor: $danger;
+	successColor: $success;
+	lightColor: $light;
+}
