Added Trivia workflow; Improved charts

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,7 +3,7 @@
 @import "../../node_modules/bootstrap/scss/mixins";
 
 $primary: #1F29B6;
-$accent: orange;
+$accent: #ffa500;
 $success: #04CA53;
 $light: #F4F7FF;
 $danger: #F02D76;
